@@ -1,75 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    
-    <title>rpmrebuild</title>
+    <meta name="generator" content="HTML Tidy for HTML5 for Linux version 5.6.0" />
+    <title>rpmrebuild features</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="Author" content="Gerbier" />
-    <link rev="made" href="mailto:gerbier@users.sourceforge.net" />
     <link rel="stylesheet" type="text/css" href="project.css" />
   </head>
   <body>
     <div>
       <h1>RPMREBUILD features</h1>
       
-      <h2>resume</h2>
-      
-      rpmrebuild is a tool to build an RPM file from a package that has already been installed<br />
+      <h2>abstract</h2>
+      rpmrebuild is a tool to build an RPM file from a RPM package.
       <br />
-      (On debian, the equivalent product is dpkg-repack)
+      notes :
+      <ul>
+	      <li>On old rpm releases, rpm provided a '--repackage' option, but it is no more available.</li>
+	      <li>On debian/ubuntu, the equivalent software is dpkg-repack.</li>
+	      <li>For use cases examples, you can look at <a href="usage.html">usage</a></li>
+      </ul>
       <hr />
       
-      <h2>use</h2>
+      <h2>basic feature</h2>
       <ul>
-	<li>since release 0.5, it should work on any linux distribution using rpm.</li>
-	<li>basic rpmrebuild use do not require any rpm building knowledge</li>
+	<li>it should work on any linux distribution using rpm, because it has very little dependencies (bash, awk).</li>
+	<li>basic rpmrebuild use do not require any rpm building knowledge, just type <em>rpmrebuild package_name</em> to rebuild an installed package</li>
       </ul>
-      
-      <h3>rebuild a lost rpm</h3>
-      
-      It was my first goal : I wanted to a batch rebuild of rpm file from the rpm database, in
-      case of lost files. Command : <em>rpmrebuild package_name</em> 
-      
-      <h3>build a modified rpm</h3>
-      
-      You have an installed package, you have customised (configuration ...) and want to
-      distribute this one : just use rpmrebuild to build a new rpm ( no need to know anything about rpm building) !
-      Command : <em>rpmrebuild package_name</em> 
-
-      <h3>modify the specfile</h3>
-
-      For advanced users, who know the specfile format, you can edit and modify "on the fly" the specfile with the command : <em>rpmrebuild -e package_name</em>
-
-      <h3>plugins</h3>
-
-      Plugins allow to make batch changes on specfiles.
-      
-      <h3>advices</h3>
-      
-      <ul>
-	<li>rpmrebuild do not need explicitly to be run on root superuser, but you have to be root if some files are root-protected (600)</li>
-	
-	<li>the specfile is deleted after use. If you want to keep it, use -s option</li>
-	
-	<li>the rpm files are build on "natural" location (for example, on Redhat, on /usr/src/redhat/RPMS, by default).<br />
-	but you may change this with -d option or with ~/.rpmmacros file (add "%_topdir your_dir")</li>
-	
-	<li>rpmrebuild has numerous options, check them with <em>man rpmrebuild</em> or <em>rpmrebuild --help</em></li>
-      </ul>
-      
-      <h3>any other way</h3>
-      I know there is an "repackage" option in recent rpm releases, but it is not convenient, as you
-      have to uninstall the package ...<br />
-      (not always possible, because of dependencies)
       <hr />
       
+      <h2>advanced feature</h2>
+      You need to have some rpm spec knowledge.
+
+      <br />
+      You can build an rpm file from :
+      <ul>
+	<li>an installed rpm package</li>
+	<li>an rpm file, with the -p option</li>
+      </ul>
+
+      Rpmrebuild works in two stages :
+      <ol>
+	<li>first it builds a spec file</li>
+	<li>then it uses rpmbuild to generate the rpm file</li>
+      </ol>
+      The main interest is to modify the generated spec file, to build a different rpm package.
+      
+      <h3>interactive</h3>
+      You can edit and modify "on the fly" the specfile with the command : <em>rpmrebuild -e package_name</em>
+      
+      <h3>batch</h3>
+      <a href="plugins.html">Plugins</a> allow to make batch changes on specfiles.
+      
+      <hr />
       <address>
       <a href="mailto:gerbier@users.sourceforge.net">Eric Gerbier</a>
       </address><br />
-      page changed on 2012-07-10<br />
+      page changed on 2019-10-18<br />
     </div>
   </body>
 </html>
