@@ -1,0 +1,43 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+  <head>
+    <meta name="generator" content="HTML Tidy for HTML5 for Linux version 5.6.0" />
+    <title>rpmrebuild</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="Author" content="Gerbier" />
+    <link rev="made" href="mailto:gerbier@users.sourceforge.net" />
+    <link rel="stylesheet" type="text/css" href="project.css" />
+  </head>
+  <body>
+    <div>
+      <h1>plugins</h1>
+      
+    <h2>Plugins</h2>
+    <ul>
+      <li><a href="rpmrebuild_plugins.1.html">plugin manual</a></li>
+      <li><a href="compat_digest.plug.1.html">compat_digest</a></li>
+      <li><a href="demofiles.plug.1.html">demofiles</a></li>
+      <li><a href="demo.plug.1.html">demo</a></li>
+      <li><a href="file2pacDep.plug.1.html">file2pacDep</a></li>
+      <li><a href="nodoc.plug.1.html">nodoc</a></li>
+      <li><a href="set_tag.plug.1.html">set_tag</a></li>
+      <li><a href="uniq.plug.1.html">uniq</a></li>
+      <li><a href="un_prelink.plug.1.html">un_prelink</a></li>
+      <li><a href="unset_tag.plug.1.html">unset_tag</a></li>
+    </ul>
+
+    <h2>Externals plugins</h2>
+    <ul>
+      <li><a href="http://statifier.sourceforge.net/rrp_statify/">rrp_statify</a></li>
+    </ul>
+
+      <hr />
+      <address>
+      <a href="mailto:gerbier@users.sourceforge.net">Eric Gerbier</a>
+      </address><br />
+      page changed on 2018-11-07<br />
+    </div>
+  </body>
+</html>
